feat(crawler): refactor AWS and Java JLS crawling applications for improved structure and error handling